--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
                    <a class="nav-link" href="index.html">Home</a>
                    <a class="nav-link" href="events.html">Events</a>
                    <a class="nav-link" href="about.html">About</a>
-                   <a class="nav-link" href="#">Meet the team</a>
+                   <a class="nav-link" href="team.html">Meet the team</a>
                    <a class="nav-link" href="contact.html">Contact</a>
                </nav>
             </header>
