--- a/discover.html
+++ b/discover.html
@@ -15,21 +15,21 @@
 </head>
 <body> 
 
-   <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-   
-    <header>
-        <img src="gallery/napierlogo4.png" alt="logo"  width="80" height="80" class="float-md-start">
-
-        <nav class="nav nav-masthead justify-content-center float-md-end">
-           <a class="nav-link" href="index.html">Home</a>
-           <a class="nav-link" href="events.html">Events</a>
-           <a class="nav-link" href="about.html">About</a>
-           <a class="nav-link" href="#">Meet the team</a>
-           <a class="nav-link" href="contact.html">Contact</a>
-       </nav>
-    </header>
-
     <main class="discover">
+     
+            <header>
+                <img src="gallery/napierlogo4.png" alt="logo"  width="80" height="80" class="float-md-start">
+        
+                <nav class="nav nav-masthead justify-content-center float-md-end">
+                   <a class="nav-link" href="index.html">Home</a>
+                   <a class="nav-link" href="events.html">Events</a>
+                   <a class="nav-link" href="about.html">About</a>
+                   <a class="nav-link" href="team.html">Meet the team</a>
+                   <a class="nav-link" href="contact.html">Contact</a>
+               </nav>
+            </header>
+
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <div class="row">
             <div class="col-md-12">
                 <p>Disover more about us</p>
@@ -59,8 +59,9 @@
             </div>
 
             <img src="gallery/robot.png" alt="robot" width="400" height="400" class="robot">
+        </div>
     </main>
-</div>
+
 
  
 
