--- a/events.html
+++ b/events.html
@@ -15,26 +15,29 @@
 </head>
 <body class="d-flex"> 
 
-        
-   <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-
+<!--COVER-->
+<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
    <img src="gallery/windmill.jpg" alt="windmill-image" class="events-main">
 
+    <h1 class="event-title">Roadmap to the<span style = "display: block;">future of STEM</span></h1>
+</div>
+
+
+<main class="events-main">
+<!--Menu-->
     <header>
-        <img src="gallery/napierlogo4.png" alt="logo"  width="80" height="80" class="float-md-start"> 
+        <img src="gallery/napierlogo4.png" alt="logo"  width="80" height="80" class="float-md-start">
+
+        <nav class="nav nav-masthead justify-content-center float-md-end">
+           <a class="nav-link" href="index.html">Home</a>
+           <a class="nav-link" href="events.html">Events</a>
+           <a class="nav-link" href="about.html">About</a>
+           <a class="nav-link" href="team.html">Meet the team</a>
+           <a class="nav-link" href="contact.html">Contact</a>
+       </nav>
     </header>
 
-    <a href="index.html">Home</a> 
-    <a href="events.html">Events</a>
-    <a href="team.html">Meet the team</a>
-    <a href="contact.html">Contact</a>
-
-    <h1 class="event-title">Roadmap to the<span style = "display: block;">future of STEM</span></h1>
-  </div>
-
-    <main class="events-main">
-    
-       <!--Our events -->
+<!--Our events -->
 <div class="container-events">
 
       <div class="row intro-events">
