--- a/team.html
+++ b/team.html
@@ -12,17 +12,24 @@
 <body class="d-flex">
      
    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+        <img src="gallery/team1.jpg" alt="team" class="teams-main">
 
-    <img src="gallery/team1.jpg" alt="team" class="teams-main">
- 
-     <header>
-         <img src="gallery/napierlogo4.png" alt="logo"  width="80" height="80" class="float-md-start">
-     </header>
- 
-     <h1 class="team-header">Meet <span style = "display: block;">Our Team</span></h1>
+        <h1 class="team-header">Meet <span style = "display: block;">Our Team</span></h1>
    </div>
 
     <main class="teams-main">
+        <!--Menu-->
+    <header >
+        <img src="gallery/napierlogo4.png" alt="logo"  width="80" height="80" class="float-md-start">
+
+        <nav class="nav nav-masthead justify-content-end">
+           <a class="nav-link" href="index.html">Home</a>
+           <a class="nav-link" href="events.html">Events</a>
+           <a class="nav-link" href="about.html">About</a>
+           <a class="nav-link" href="team.html">Meet the team</a>
+           <a class="nav-link" href="contact.html">Contact</a>
+       </nav>
+    </header>
     
         <!--Our Team -->
         <div class="container-teams">
