--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--Bootstrap CSS-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/styles.css">
 
     <title>STEM4enU</title>
@@ -22,30 +22,34 @@
         <source src="gallery/homevideo.mp4" type="video/mp4">
     </video>
 
+     <!--Title-->
+     <h1>STEM4enU</h1>
 
-<!--LOGO AND MENU-->
+</div>
 
-
-    <div class="menu-logo">
+<main class="main-title">
+    <!--Menu-->
+    <header>
         <img src="gallery/napierlogo4.png" alt="logo"  width="80" height="80" class="float-md-start">
-    </div>
-  
-<!--HOME TITLE -->
-        <main class="main-title">
-             <h1>STEM4enU</h1>
-         </main>
 
+        <nav class="nav nav-masthead justify-content-center float-md-end">
+           <a class="nav-link" href="index.html">Home</a>
+           <a class="nav-link" href="events.html">Events</a>
+           <a class="nav-link" href="about.html">About</a>
+           <a class="nav-link" href="team.html">Meet the team</a>
+           <a class="nav-link" href="contact.html">Contact</a>
+       </nav>
+    </header>
+   
 <!--HOME FOOTER-->
          <footer class="mt-auto">
              <p>Edinburgh Napier University</p>
-         </footer>
-</div>
-
-
+            </footer>
+    </main>
 
 <!--Boostrap Bundle with Popper-->
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
 </html>
