--- a/index.html
+++ b/index.html
@@ -22,34 +22,43 @@
         <source src="gallery/homevideo.mp4" type="video/mp4">
     </video>
 
-     <!--Title-->
-     <h1>STEM4enU</h1>
-
 </div>
 
 <main class="main-title">
-    <!--Menu-->
-    <header>
-        <img src="gallery/napierlogo4.png" alt="logo"  width="80" height="80" class="float-md-start">
 
-        <nav class="nav nav-masthead justify-content-center float-md-end">
-           <a class="nav-link" href="index.html">Home</a>
-           <a class="nav-link" href="events.html">Events</a>
-           <a class="nav-link" href="about.html">About</a>
-           <a class="nav-link" href="team.html">Meet the team</a>
-           <a class="nav-link" href="contact.html">Contact</a>
-       </nav>
-    </header>
-   
-<!--HOME FOOTER-->
-         <footer class="mt-auto">
-             <p>Edinburgh Napier University</p>
-            </footer>
-    </main>
+  <!--Menu-->
+<header>
+    <div class="row">
+       <!-- <div class="col-md-2">
+            <img src="gallery/napierlogo4.png" alt="logo"  width="80" height="80" class="float-md-start">
+        </div>-->
+
+        <div class="col-md-12">
+            <nav class="nav nav-masthead justify-content-center float-md-end">
+            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link" href="events.html">Events</a>
+            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="team.html">Meet the team</a>
+            <a class="nav-link" href="contact.html">Contact</a>
+        </nav>
+        </div>
+    </div>
+</header>
+
+   <!--Title-->
+    <div class="row home-title">
+        <div class="col-md-12">
+            <h1>STEM4enU</h1>
+        </div>
+    </div>
+</main>
+
+
 
 <!--Boostrap Bundle with Popper-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+
 </body>
 </html>
