--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 </head>
     <body class="d-flex text-center">
     
-        <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+        <div class="cover-contact d-flex w-100 h-100 p-3 mx-auto flex-column">
 
             <!--CONTACT FORM BACKGROUND VIDEO-->
      
@@ -42,7 +42,7 @@
                 <div class="container">
                     <div class="row justify justify-content-center">
                         <div class="col-11 col-md-8 col-lg-6 col-xl-5">
-                            <form class="" onsubmit="event.preventDefault()">
+                            <form name="contact" method="POST" data-netlify="true">
                                 <div class="card">
                                     <div class="row mt-0">
                                         <div class="col-md-12 ">
