--- a/events.html
+++ b/events.html
@@ -14,34 +14,44 @@
 
     <title>Stemen4u</title>
 </head>
-<body class="d-flex"> 
+<body class="d-flex text-center"> 
 
 <!--COVER-->
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-   <img src="gallery/windmill.jpg" alt="windmill-image" class="events-main">
 
-    <h1 class="event-title">Roadmap to the<span style = "display: block;">future of STEM</span></h1>
+
+    <img src="gallery/windmill.jpg" alt="windmill-image" class="events-main">
+
+        <h1 class="event-title">Roadmap to the<span style = "display: block;">future of STEM</span></h1>
+
 </div>
 
-
 <main class="events-main">
-<!--Menu-->
-    <header>
-        <img src="gallery/napierlogo4.png" alt="logo"  width="80" height="80" class="float-md-start">
 
-        <nav class="nav nav-masthead justify-content-center float-md-end">
-           <a class="nav-link" href="index.html">Home</a>
-           <a class="nav-link" href="events.html">Events</a>
-           <a class="nav-link" href="about.html">About</a>
-           <a class="nav-link" href="team.html">Meet the team</a>
-           <a class="nav-link" href="contact.html">Contact</a>
-       </nav>
+
+    <!--Menu-->
+    <header>
+        <div class="row">
+        <div class="col-md-6 align-self-start">
+                <img src="gallery/napierlogo4.png" alt="logo"  width="80" height="80" class="float-md-start">
+            </div>
+
+            <div class="col-md-6 ml-md-auto">
+                <nav class="nav nav-masthead">
+                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link" href="events.html">Events</a>
+                <a class="nav-link" href="about.html">About</a>
+                <a class="nav-link" href="team.html">Meet the team</a>
+                <a class="nav-link" href="contact.html">Contact</a>
+            </nav>
+            </div>
+        </div>
     </header>
 
 <!--Our events -->
 <div class="container-events">
 
-      <div class="row intro-events">
+     <div class="row intro-events">
         <div class="col-12">
           <h5 class="intro-events">Your future, your STEM!</h5>
           <div class="intro-details">
@@ -160,6 +170,7 @@
       <p>Edinburgh Napier University</p>
     </footer>
     </main>
+</div>
 
 <!--Boostrap Bundle with Popper-->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
