--- a/index.html
+++ b/index.html
@@ -13,29 +13,26 @@
 
     <title>STEM4enU</title>
 
-<body class="video-container d-flex text-center">
+<body class="video-container text-center">
 
 <!--VIDEO-->
     
-<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+<div class="cover-container d-flex w-100 h-100 flex-column">
 
-    <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+  <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
         <source src="gallery/homevideo.mp4" type="video/mp4">
-    </video>
+</video>
 
-</div>
-
-<main class="main-title">
 
   <!--Menu-->
 <header>
     <div class="row">
-       <!-- <div class="col-md-2">
+      <div class="col-md-6 align-self-start">
             <img src="gallery/napierlogo4.png" alt="logo"  width="80" height="80" class="float-md-start">
-        </div>-->
+        </div>
 
-        <div class="col-md-12">
-            <nav class="nav nav-masthead justify-content-center float-md-end">
+        <div class="col-md-6 ml-md-auto">
+            <nav class="nav nav-masthead">
             <a class="nav-link" href="index.html">Home</a>
             <a class="nav-link" href="events.html">Events</a>
             <a class="nav-link" href="about.html">About</a>
@@ -46,15 +43,26 @@
     </div>
 </header>
 
+
+
+<main class="home-container">
+
    <!--Title-->
+
     <div class="row home-title">
-        <div class="col-md-12">
+        <div class="col-sm-12">
             <h1>STEM4enU</h1>
         </div>
     </div>
+   
+     <div class="row home-footer">
+        <div class="col-sm-12">
+            <p>Edinburgh Napier University</p>
+        </div>
+    </div>
+
 </main>
-
-
+</div>
 
 <!--Boostrap Bundle with Popper-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
