--- a/about.html
+++ b/about.html
@@ -94,7 +94,13 @@
                     </div>
                 </div>
             </div> 
-    </main>
+
+                <!--Footer-->
+     <footer>
+        <p>Edinburgh Napier University</p>
+      </footer>
+
+</main>
      
 
 
