--- a/team.html
+++ b/team.html
@@ -19,18 +19,25 @@
    </div>
 
     <main class="teams-main">
-        <!--Menu-->
-    <header >
-        <img src="gallery/napierlogo4.png" alt="logo"  width="80" height="80" class="float-md-start">
+   
+    <!--Menu-->
+<header>
+    <div class="row">
+      <div class="col-md-6 align-self-start">
+            <img src="gallery/napierlogo4.png" alt="logo"  width="80" height="80" class="float-md-start">
+        </div>
 
-        <nav class="nav nav-masthead justify-content-end">
-           <a class="nav-link" href="index.html">Home</a>
-           <a class="nav-link" href="events.html">Events</a>
-           <a class="nav-link" href="about.html">About</a>
-           <a class="nav-link" href="team.html">Meet the team</a>
-           <a class="nav-link" href="contact.html">Contact</a>
-       </nav>
-    </header>
+        <div class="col-md-6 ml-md-auto">
+            <nav class="nav nav-masthead">
+            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link" href="events.html">Events</a>
+            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="team.html">Meet the team</a>
+            <a class="nav-link" href="contact.html">Contact</a>
+        </nav>
+        </div>
+    </div>
+</header>
     
         <!--Our Team -->
         <div class="container-teams">
