--- a/discover.html
+++ b/discover.html
@@ -33,13 +33,13 @@
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
 
         <div class="row">
-            <div class="col-md-10">
+            <div class="col-sm-12 col-md-10">
                 <p>Disover more about us</p>
             </div>
         </div>
 
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-sm-12 col-md-8">
                     <h1 class="discover-people"><span class="pretty-underline">Our Poeple</span>
                         <a class="discover-btn" href="team.html" role="button"><u>discover</u>
                             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
@@ -50,7 +50,7 @@
             </div>
 
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-sm-12 col-md-12">
                     <h1 class="discover-events"><span class="pretty-underline">Our Events</span>
                         <a class="discover-btn" href="events.html" role="button"><u>discover</u>
                             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
