--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
         </div>
     </div>
    
-     <!--<div class="row home-footer">
+     <div class="row home-footer">
         <div class="col-sm-12">
             <p>Edinburgh Napier University</p>
         </div>
-    </div>-->
+    </div>
 
 </main>
 </div>
