--- a/team.html
+++ b/team.html
@@ -22,21 +22,20 @@
    
     <!--Menu-->
 <header>
-    <div class="row">
-      <div class="col-md-6 align-self-start">
-            <img src="gallery/napierlogo4.png" alt="logo"  width="80" height="80" class="float-md-start">
-        </div>
+    <img src="gallery/napierlogo4.png" alt="logo"  width="100" height="100" class="logo-menu">
+             
+    <div id="myNav" class="overlay">
+       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+       <div class="overlay-content">
+         <a href="about.html">About</a>
+         <a href="events.html">Events</a>
+         <a href="team.html">Team</a>
+         <a href="contact.html">Contact</a>
+       </div>
+     </div>
 
-        <div class="col-md-6 ml-md-auto">
-            <nav class="nav nav-masthead">
-            <a class="nav-link" href="index.html">Home</a>
-            <a class="nav-link" href="events.html">Events</a>
-            <a class="nav-link" href="about.html">About</a>
-            <a class="nav-link" href="team.html">Meet the team</a>
-            <a class="nav-link" href="contact.html">Contact</a>
-        </nav>
-        </div>
-    </div>
+
+     <span class="menu-button" onclick="openNav()">&#9776;</span>
 </header>
     
         <!--Our Team -->
