--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
            <div class="overlay-content">
              <a href="about.html">About</a>
              <a href="events.html">Events</a>
-             <a href="team.html">Team</a>
+             <a href="team.html">Meet the Team</a>
              <a href="contact.html">Contact</a>
            </div>
          </div>
@@ -101,7 +101,15 @@
 
 </main>
      
-
+<script>
+    function openNav() {
+      document.getElementById("myNav").style.width = "100%";
+    }
+    
+    function closeNav() {
+      document.getElementById("myNav").style.width = "0%";
+    }
+</script>
 
 <!--Boostrap Bundle with Popper-->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
