--- a/discover.html
+++ b/discover.html
@@ -26,7 +26,7 @@
                    <div class="overlay-content">
                      <a href="about.html">About</a>
                      <a href="events.html">Events</a>
-                     <a href="team.html">Team</a>
+                     <a href="team.html">Meet the Team</a>
                      <a href="contact.html">Contact</a>
                    </div>
                  </div>
@@ -69,7 +69,15 @@
         </div>
     </main>
 
-
+    <script>
+        function openNav() {
+          document.getElementById("myNav").style.width = "100%";
+        }
+        
+        function closeNav() {
+          document.getElementById("myNav").style.width = "0%";
+        }
+    </script>
  
 
 <!--Boostrap Bundle with Popper-->
