--- a/team.html
+++ b/team.html
@@ -22,14 +22,14 @@
    
     <!--Menu-->
 <header>
-    <img src="gallery/napierlogo4.png" alt="logo"  width="100" height="100" class="logo-menu">
+    <!--<img src="gallery/napierlogo4.png" alt="logo"  width="80" height="80" class="logo-menu">-->
              
     <div id="myNav" class="overlay">
        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
        <div class="overlay-content">
          <a href="about.html">About</a>
          <a href="events.html">Events</a>
-         <a href="team.html">Team</a>
+         <a href="team.html">Meet the Team</a>
          <a href="contact.html">Contact</a>
        </div>
      </div>
@@ -153,6 +153,16 @@
        <p>Edinburgh Napier University</p>
      </footer>
      </main>
+
+     <script>
+        function openNav() {
+          document.getElementById("myNav").style.width = "100%";
+        }
+        
+        function closeNav() {
+          document.getElementById("myNav").style.width = "0%";
+        }
+    </script>
 
 <!--Boostrap Bundle with Popper-->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
