--- a/discover.html
+++ b/discover.html
@@ -24,6 +24,7 @@
                 <div id="myNav" class="overlay">
                    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                    <div class="overlay-content">
+                     <a href="index.html">Home</a>
                      <a href="about.html">About</a>
                      <a href="events.html">Events</a>
                      <a href="team.html">Meet the Team</a>
