--- a/discover.html
+++ b/discover.html
@@ -19,7 +19,7 @@
     <main class="discover">
 
             <header>
-                <img src="gallery/napierlogo4.png" alt="logo"  width="100" height="100" class="logo-menu">
+                <!--<img src="gallery/napierlogo4.png" alt="logo"  width="100" height="100" class="logo-menu">-->
              
                 <div id="myNav" class="overlay">
                    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
