--- a/events.html
+++ b/events.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="styles/devices.css">
 
 
-    <title>Stemen4u</title>
+    <title>STEM4enU</title>
 </head>
 <body class="d-flex text-center"> 
 
