--- a/events.html
+++ b/events.html
@@ -27,7 +27,7 @@
 
 </div>
 
-<main class="events-main">
+<main class="d-flex w-100 h-100 p-3 mx-auto flex-column">
 
          <!--Menu-->
          <header>
@@ -69,7 +69,7 @@
 <div class="row">
     <div class="event1">
         <div class="row no-gutters">
-            <div class="col-sm-6">
+            <div class="col-sm-12 col-md-6">
                 <div class="card-body">
                     <h5 class="card-title">Artificial Intelligence in operations research</h5>
                     <p class="card-text">
@@ -84,7 +84,7 @@
                     <button type="button" class="btn btn-outline-danger"><a href="contact.html">Sign Up Now</a></button>
                  </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-12 col-md-6">
                 <img src="gallery/coding.png" class="card-img-top" alt="about">
             </div>
         </div>
@@ -96,10 +96,10 @@
 <div class="row">
     <div class="event2">  
         <div class="row no-gutters">
-            <div class="col-sm-6">
+            <div class="col-sm-12 col-md-6">
                 <img src="gallery/info-seeking.png" class="card-img-top" alt="about2">
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-12 col-md-6">
                 <div class="card-body2">
                     <h5 class="card-title">Information and feedback systems for decision making</h5>
                     <p class="card-text">
@@ -121,7 +121,7 @@
  <div class="row">
         <div class="event3">
             <div class="row no-gutters">
-                <div class="col-sm-6">
+                <div class="col-sm-12 col-md-6">
                     <div class="card-body">
                         <h5 class="card-title">Exploring the Future Energy Landscape</h5>
                         <p class="card-text">
@@ -132,7 +132,7 @@
                         <button type="button" class="btn btn-outline-danger"><a href="contact.html">Sign Up Now</a></button>
                     </div>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-12 col-md-6">
                     <img src="gallery/solarpanels.jpg" class="card-img-top" alt="about3">
                 </div>
             </div>
@@ -145,10 +145,10 @@
 <div>
     <div class="event4">
         <div class="row no-gutters">
-            <div class="col-sm-6">
+            <div class="col-sm-12 col-md-6">
                 <img src="gallery/robot1.jpg" class="card-img-top" alt="about4">
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-12 col-md-6">
                 <div class="card-body2">
                     <h5 class="card-title">Reinforcement Learning based Intelligent learning for training robots</h5>
                     <p class="card-text">
@@ -164,13 +164,15 @@
         </div>
     </div>
 </div>
-</div>
+
+
 
     <!--Footer-->
-    <footer>
-      <p>Edinburgh Napier University</p>
-    </footer>
-    </main>
+    
+        <footer>
+        <p>Edinburgh Napier University</p>
+        </footer>
+</main>
 </div>
 
 <script>
