--- a/events.html
+++ b/events.html
@@ -17,15 +17,15 @@
 <body class="d-flex text-center"> 
 
 <!--COVER-->
-<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+<!--<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column"></div>-->
 
     <div class="jumbotron jumbotron-fluid">
         <img src="gallery/windmill.jpg" alt="windmill-image" class="events-main">
 
-            <h1 class="event-title">Roadmap to the<span style = "display: block;">future of STEM</span></h1>
+            <h1 class="event-title">Roadmap to the future of STEM</h1>
     </div>
 
-</div>
+
 
 <main class="d-flex w-100 h-100 p-3 mx-auto flex-column">
 
