--- a/events.html
+++ b/events.html
@@ -20,14 +20,14 @@
 <!--<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column"></div>-->
 
     <div class="jumbotron jumbotron-fluid">
-        <img src="gallery/windmill.jpg" alt="windmill-image" class="events-main">
+       <img src="gallery/windmill.jpg" alt="windmill-image" class="events-main">-->
 
             <h1 class="event-title">Roadmap to the future of STEM</h1>
     </div>
 
 
 
-<main class="d-flex w-100 h-100 p-3 mx-auto flex-column">
+<main class="w-100 h-100 p-3 mx-auto flex-column">
 
          <!--Menu-->
          <header>
@@ -53,23 +53,27 @@
 <!--Our events -->
 <div class="container container-events">
 
-     <div class="intro-events">
-          <h5 class="intro-events">Your future, your STEM!</h5>
-          <div class="intro-details">
-                <h4>6 - 10 June 2022</h4>
-                <p>New S4 pupils will engage in activities designed to promote collaborative learning, creative thinking, problem solving and communication skills.</p>
-                <p>All activities are aligned with Curriculum for Excellence.</p>
-                <p>Daily from 9:30 am to 2:45 pm</p>
-                <p>Lunch will be provided.</p>
-          </div>
+    <div class="row">
+        <div class="col-12">
+
+            <div class="intro-events">
+                <h5 class="intro-events">Your future, your STEM!</h5>
+                <div class="intro-details">
+                        <h4>6 - 10 June 2022</h4>
+                        <p>New S4 pupils will engage in activities designed to promote collaborative learning, creative thinking, problem solving and communication skills.</p>
+                        <p>All activities are aligned with Curriculum for Excellence.</p>
+                        <p>Daily from 9:30 am to 2:45 pm</p>
+                        <p>Lunch will be provided.</p>
+                </div>
+            </div>
+        </div>
     </div>
-    
             
     <!--Event 1-->
 <div class="row">
     <div class="event1">
         <div class="row no-gutters">
-            <div class="col-sm-12 col-md-6">
+            <div class="col-sm-12 col-md-6 col-lg-6">
                 <div class="card-body">
                     <h5 class="card-title">Artificial Intelligence in operations research</h5>
                     <p class="card-text">
@@ -84,7 +88,7 @@
                     <button type="button" class="btn btn-outline-danger"><a href="contact.html">Sign Up Now</a></button>
                  </div>
             </div>
-            <div class="col-sm-12 col-md-6">
+            <div class="col-sm-12 col-md-6 col-lg-6">
                 <img src="gallery/coding.png" class="card-img-top" alt="about">
             </div>
         </div>
@@ -96,10 +100,10 @@
 <div class="row">
     <div class="event2">  
         <div class="row no-gutters">
-            <div class="col-sm-12 col-md-6">
+            <div class="col-sm-12 col-md-6 col-lg-6">
                 <img src="gallery/info-seeking.png" class="card-img-top" alt="about2">
             </div>
-            <div class="col-sm-12 col-md-6">
+            <div class="col-sm-12 col-md-6 col-lg-6">
                 <div class="card-body2">
                     <h5 class="card-title">Information and feedback systems for decision making</h5>
                     <p class="card-text">
@@ -121,7 +125,7 @@
  <div class="row">
         <div class="event3">
             <div class="row no-gutters">
-                <div class="col-sm-12 col-md-6">
+                <div class="col-sm-12 col-md-6 col-lg-6">
                     <div class="card-body">
                         <h5 class="card-title">Exploring the Future Energy Landscape</h5>
                         <p class="card-text">
@@ -132,7 +136,7 @@
                         <button type="button" class="btn btn-outline-danger"><a href="contact.html">Sign Up Now</a></button>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-6">
+                <div class="col-sm-12 col-md-6 col-lg-6">
                     <img src="gallery/solarpanels.jpg" class="card-img-top" alt="about3">
                 </div>
             </div>
@@ -145,10 +149,10 @@
 <div>
     <div class="event4">
         <div class="row no-gutters">
-            <div class="col-sm-12 col-md-6">
+            <div class="col-sm-12 col-md-6 col-lg-6">
                 <img src="gallery/robot1.jpg" class="card-img-top" alt="about4">
             </div>
-            <div class="col-sm-12 col-md-6">
+            <div class="col-sm-12 col-md-6 ">
                 <div class="card-body2">
                     <h5 class="card-title">Reinforcement Learning based Intelligent learning for training robots</h5>
                     <p class="card-text">
