--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <!--Menu-->
   <header>
-        <img src="gallery/napierlogo4.png" alt="logo"  width="100" height="100" class="logo-menu">
+        <!--<img src="gallery/napierlogo4.png" alt="logo"  width="100" height="100" class="logo-menu">-->
                 
         <div id="myNav" class="overlay">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
