--- a/events.html
+++ b/events.html
@@ -165,6 +165,10 @@
     </div>
 </div>
 
+<div class="flyer">
+   <a href="gallery/STEM4enU_flyer_final.pdf">Download our Flyer</a>
+</div>
+
 
     <!--Footer-->
     
