--- a/events.html
+++ b/events.html
@@ -72,6 +72,7 @@
             <div class="col-sm-12 col-md-6 col-lg-6">
                 <div class="card-body">
                     <h5 class="card-title">Artificial Intelligence in operations research</h5>
+                    <a  href="team.html">Workshop leader Neil Urquhart</a>
                     <p class="card-text">
                         Each day Computer Science solves many problems that improve our lives and supports society. 
                         One of the most challenging areas is that of deliveries, ensuring that goods and services are delivered quickly and efficiently. 
@@ -102,6 +103,7 @@
             <div class="col-sm-12 col-md-6 col-lg-6">
                 <div class="card-body2">
                     <h5 class="card-title">Information and feedback systems for decision making</h5>
+                    <a href="team.html">Workshop leader Wegene Demeke</a>
                     <p class="card-text">
                         We made decisions all the time. Information is a key to make informed decisions. 
                         This workshop will introduce you to how previous decisions affect future outcomes, sometimes with delayed responses. 
@@ -124,6 +126,7 @@
                 <div class="col-sm-12 col-md-6 col-lg-6">
                     <div class="card-body">
                         <h5 class="card-title">Exploring the Future Energy Landscape</h5>
+                        <a href="team.html">Workshop leader Jubaer Ahmed</a>
                         <p class="card-text">
                             We are running out of energy sources. Our conventional supplies of energy from Natural Gas, Oil and Coal are depleting and we need to stop using these anyway to save the world from global warming. 
                             What are we going to do without the supply of energy? Is this the end of the growth of modern civilization? Let’s have a look into the future energy landscape where renewable energy sources like Solar, Wind, Hydro, Nuclear, geothermal and Hydrogen cells will govern the energy supply. 
@@ -151,6 +154,7 @@
             <div class="col-sm-12 col-md-6 ">
                 <div class="card-body2">
                     <h5 class="card-title">Reinforcement Learning based Intelligent learning for training robots</h5>
+                    <a href="team.html">Workshop leader Shufan Yang</a>
                     <p class="card-text">
                         Reinforcement learning (RL), as a research paradigm, concerns not only trial-and-error learning without a model of the environment, but also deliberative planning with a model that can present the dynamics of the environment.
                         Often robots can be re-trained with changes made to their environment using a reinforcement learning method. 
