meet the team photos

--- a/team.html
+++ b/team.html
@@ -64,7 +64,7 @@
                         AI such as evolutionary algorithms to solve real-world problems such as those related to scheduling, routing and logistics. 
                         As well as publishing conference and journal papers he has recently written a book "Nature Inspired Computing for Delivery Problems: 
                         From Theory to the Real-World" due to be released by Springer this year. His research has examined problems in the area urban logistics including supermarket deliveries, parcel logistics and the delivery of delivery of Christmas presents by Santa Claus.  
-                        An example of his work can be found at  https://foodel.napier.ac.uk
+                        An example of his work can be found <a href="https://foodel.napier.ac.uk">here.</a>
                      </p>
                  </div>
              </div>
